--- a/CPS/AndroidManifest.xml
+++ b/CPS/AndroidManifest.xml
@@ -3,6 +3,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+        
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
@@ -11,6 +13,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
