--- a/CPS/AndroidManifest.xml
+++ b/CPS/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme" >
         <uses-library android:name="com.google.android.maps"/>
         <activity
-            android:name=".LotMapActivity"
+            android:name=".ViewSpotActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LotMapActivity" />
     </application>
 
 </manifest>
