--- a/CPS/.classpath
+++ b/CPS/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="D:/Android SDK/add-ons/addon-google_apis-google-16/libs/maps.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/D:/Android SDK/add-ons/addon-google_apis-google-16/docs/reference"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
