--- a/CPS/.classpath
+++ b/CPS/.classpath
@@ -2,12 +2,24 @@
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="D:/Android SDK/add-ons/addon-google_apis-google-16/libs/maps.jar">
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Dawn/android-sdks/platforms/android-10/android.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/D:/Android SDK/add-ons/addon-google_apis-google-16/docs/reference"/>
+			<attribute name="javadoc_location" value="http://developer.android.com/reference/"/>
 		</attributes>
+		<accessrules>
+			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
+		</accessrules>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/maps.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dawn/android-sdks/platforms/android-14/android.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://developer.android.com/reference/"/>
+		</attributes>
+		<accessrules>
+			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
+		</accessrules>
 	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
