--- a/CPS/.classpath
+++ b/CPS/.classpath
@@ -4,22 +4,10 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Dawn/android-sdks/platforms/android-10/android.jar">
+	<classpathentry kind="lib" path="C:/Program Files/Android/android-sdk/add-ons/addon-google_apis-google-11/libs/maps.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://developer.android.com/reference/"/>
+			<attribute name="javadoc_location" value="file:/C:/Program Files/Android/android-sdk/add-ons/addon-google_apis-google-11/docs/reference"/>
 		</attributes>
-		<accessrules>
-			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="libs/maps.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Dawn/android-sdks/platforms/android-14/android.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://developer.android.com/reference/"/>
-		</attributes>
-		<accessrules>
-			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
-		</accessrules>
 	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
