--- a/CPS/AndroidManifest.xml
+++ b/CPS/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".LotMapActivity" />
         <activity android:name=".RegisterWebViewActivity" />
+        <activity android:name=".SelectSpotActivity" />
     </application>
 
 </manifest>
