--- a/CPS/.classpath
+++ b/CPS/.classpath
@@ -9,5 +9,10 @@
 			<attribute name="javadoc_location" value="file:/C:/Program Files/Android/android-sdk/add-ons/addon-google_apis-google-11/docs/reference"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Dawn/android-sdks/add-ons/addon-google_apis-google-14/libs/maps.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Dawn/android-sdks/add-ons/addon-google_apis-google-14/docs/reference"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
